2009-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sp25/task1.c: Use PRIuPTR for segment_sizes.

2009-11-30	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* sp68/Makefile.in, sp68/.cvsignore,
	* spintrcritical17/Makefile.in, spintrcritical17/.cvsignore:
	removed unneeded Makefile.in, added cvsignore
	
2009-11-30	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* sp68/init.c, sp68/Makefile.am, sp68/sp68.doc, sp68/sp68.scn,
	spintrcritical17/init.c, spintrcritical17/Makefile.am,
	spintrcritical17/spintrcritical17.doc,
	spintrcritical17/spintrcritical17.scn: New files.
	* Makefile.am, configure.ac: Update for test sp68 and spintrcritical17.
	* sp31/task1.c, sp67/init.c: Changes for new timer server
	implementation.
	* sp52/init.c: The init task must be preemptible to let the timer
	server run.

2009-11-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1460/cpukit
	* sp43/init.c: Change return type on methods accessing portions of
	RTEMS Ids to int. This allows -1 to be return on error.

2009-11-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* spsize/Makefile.am: Fix broken install rule.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spprintk/spprintk.scn: Add end of line at end of file.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp32/Makefile.am, sp33/Makefile.am, sp37/Makefile.am,
	sp38/Makefile.am, sp39/Makefile.am, sp43/Makefile.am,
	sp44/Makefile.am, spfatal01/Makefile.am, spfatal02/Makefile.am,
	spfatal03/Makefile.am, spfatal04/Makefile.am, spfatal05/Makefile.am,
	spfatal06/Makefile.am, spfatal07/Makefile.am, spfatal08/Makefile.am,
	spfatal09/Makefile.am, spobjgetnext/Makefile.am,
	spprintk/Makefile.am, spsize/Makefile.am, spwatchdog/Makefile.am,
	spwkspace/Makefile.am: Add documentation files for multiple tests.
	* sp32/sp32.doc, sp33/sp33.doc, sp37/sp37.doc, sp38/sp38.doc,
	sp39/sp39.doc, sp43/sp43.doc, sp44/sp44.doc, spfatal01/spfatal01.doc,
	spfatal02/spfatal02.doc, spfatal03/spfatal03.doc,