@@ -47,6 +47,16 @@ TA1 - rtems_timer_server_fire_when - timer 1 in 3 seconds
 TA1 - rtems_task_wake_after - 1 second
 TA1 - rtems_clock_get_tod - 09:00:11   12/31/1988
 TA1 - rtems_timer_cancel - timer 1
+TA1 - rtems_timer_server_fire_when - timer 1 in 3 seconds
+TA1 - rtems_timer_server_fire_when - timer 2 in 3 seconds
+TA1 - rtems_task_wake_after - 1 second
+TA1 - rtems_timer_server_fire_when - timer 2 in 3 seconds
+TA1 - rtems_timer_cancel - timer 1
+TA1 - rtems_timer_cancel - timer 2
+TA1 - rtems_timer_server_fire_when - timer 1 in 1 seconds
+TA1 - rtems_timer_server_fire_after - timer 2 in 1 tick
+TA1 - rtems_task_wake_after - 1 tick
+TA1 - rtems_timer_cancel - timer 1
 TA1 - rtems_task_wake_after - YIELD (only task at priority)
 TA1 - timer_deleting - timer 1
-*** END OF TEST 31 *** 
+*** END OF TEST 31 ***
