@@ -11,6 +11,8 @@
  *  COPYRIGHT (c) 1989-2009.
  *  On-Line Applications Research Corporation (OAR).
  *
+ *  Copyright (c) 2009 embedded brains GmbH.
+ *
  *  The license and distribution terms for this file may be
  *  found in the file LICENSE in this distribution or at
  *  http://www.rtems.com/license/LICENSE.
@@ -33,6 +35,14 @@ rtems_timer_service_routine Should_not_fire_TSR(
 )
 {
   TSR_fired = 1;
+}
+
+rtems_timer_service_routine Do_nothing(
+  rtems_id  ignored_id,
+  void     *ignored_address
+)
+{
+  /* Do nothing */
 }
 
 static Watchdog_Interval schedule_time( void )
@@ -266,6 +276,67 @@ rtems_task Task_1(
   directive_failed( status, "rtems_task_wake_after" );
 
   Print_time();
+
+  puts( "TA1 - rtems_timer_cancel - timer 1" );
+  status = rtems_timer_cancel( tmid );
+  directive_failed( status, "rtems_timer_cancel" );
+
+/* TOD timer insert with non empty TOD timer chain */
+
+  status = rtems_clock_get_tod( &time );
+  directive_failed( status, "rtems_clock_get_tod" );
+
+  time.second += 3;
+
+  puts( "TA1 - rtems_timer_server_fire_when - timer 1 in 3 seconds" );
+  status = rtems_timer_server_fire_when( tmid, &time, Do_nothing, NULL );
+  directive_failed( status, "rtems_timer_server_fire_when" );
+
+  puts( "TA1 - rtems_timer_server_fire_when - timer 2 in 3 seconds" );
+  status = rtems_timer_server_fire_when( tmid2, &time, Do_nothing, NULL );
+  directive_failed( status, "rtems_timer_server_fire_when" );
+
+  puts( "TA1 - rtems_task_wake_after - 1 second" );
+  status = rtems_task_wake_after( 1 * rtems_clock_get_ticks_per_second() );
+  directive_failed( status, "rtems_task_wake_after" );
+
+  puts( "TA1 - rtems_timer_server_fire_when - timer 2 in 3 seconds" );
+  status = rtems_timer_server_fire_when( tmid2, &time, Do_nothing, NULL );
+  directive_failed( status, "rtems_timer_server_fire_when" );
+
+  puts( "TA1 - rtems_timer_cancel - timer 1" );
+  status = rtems_timer_cancel( tmid );
+  directive_failed( status, "rtems_timer_cancel" );
+
+  puts( "TA1 - rtems_timer_cancel - timer 2" );
+  status = rtems_timer_cancel( tmid2 );
+  directive_failed( status, "rtems_timer_cancel" );
+
+/* TOD chain processing with time wrap */
+
+  time.second = 30;
+
+  status = rtems_clock_set( &time );
+  directive_failed( status, "rtems_clock_set" );
+
+  time.second = 31;
+
+  puts( "TA1 - rtems_timer_server_fire_when - timer 1 in 1 seconds" );
+  status = rtems_timer_server_fire_when( tmid, &time, Do_nothing, NULL );
+  directive_failed( status, "rtems_timer_server_fire_when" );
+
+  time.second = 29;
+
+  status = rtems_clock_set( &time );
+  directive_failed( status, "rtems_clock_set" );
+
+  puts( "TA1 - rtems_timer_server_fire_after - timer 2 in 1 tick" );
+  status = rtems_timer_server_fire_after( tmid2, 1, Do_nothing, NULL );
+  directive_failed( status, "rtems_timer_server_fire_after" );
+
+  puts( "TA1 - rtems_task_wake_after - 1 tick" );
+  status = rtems_task_wake_after( 1 );
+  directive_failed( status, "rtems_task_wake_after" );
 
   puts( "TA1 - rtems_timer_cancel - timer 1" );
   status = rtems_timer_cancel( tmid );
